Bug 1340110 - Make shell resolve root module relative to current directory as happens for non-module scripts r=anba